k8s/koiner/prod/graphql/koiner-chain-graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: koiner-chain-graphql
  name: koiner-chain-graphql
  namespace: koiner-graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      service: koiner-chain-graphql
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: koiner-chain-graphql
    spec:
      containers:
        - name: koiner-chain-graphql
          image: elimbatido/koiner-chain-graphql:v0.2.8
          ports:
            - containerPort: 3001
          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
          imagePullPolicy: Always
      serviceAccountName: default
