k8s/koiner/prod/graphql/koiner-graphql-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: koiner-graphql-gateway
  name: koiner-graphql-gateway
  namespace: koiner-graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      service: koiner-graphql-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: koiner-graphql-gateway
    spec:
      containers:
        - name: koiner-graphql-gateway
          image: elimbatido/koiner-graphql-gateway:v0.2.4
#          envFrom:
#            - configMapRef:
#                name: gateway-config
          ports:
            - containerPort: 3000
#          readinessProbe:
#            tcpSocket:
#              port: 3000
#            initialDelaySeconds: 5
#            periodSeconds: 5
#          livenessProbe:
#            httpGet:
#              path: /healthcheck
#              port: 3000
          imagePullPolicy: Always
      serviceAccountName: default
