k8s/koiner/prod/graphql/koiner-contracts-graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: koiner-contracts-graphql
  name: koiner-contracts-graphql
  namespace: koiner-graphql
spec:
  ports:
    - name: "8000"
      protocol: TCP
      port: 8000
      targetPort: 3002
  selector:
    service: koiner-contracts-graphql
