k8s/koiner/prod/graphql/koiner-network-graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: koiner-network-graphql
  name: koiner-network-graphql
  namespace: koiner-graphql
spec:
  ports:
    - name: "8000"
      protocol: TCP
      port: 8000
      targetPort: 3003
  selector:
    service: koiner-network-graphql
