k8s/koiner/prod/graphql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koiner-graphql-ingress
  namespace: koiner-graphql
  annotations:
    cert-manager.io/cluster-issuer: "cert-manager-webhook-dnsimple-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.koiner.app
      secretName: koiner-api-tls
    - hosts:
        - chain.api.koiner.app
      secretName: koiner-chain-api-tls
    - hosts:
        - contracts.api.koiner.app
      secretName: koiner-contracts-api-tls
    - hosts:
        - network.api.koiner.app
      secretName: koiner-network-api-tls
    - hosts:
        - tokenize.api.koiner.app
      secretName: koiner-tokenize-api-tls
  rules:
    - host: api.koiner.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: koiner-graphql-gateway
                port:
                  number: 3000
    - host: chain.api.koiner.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: koiner-chain-graphql
                port:
                  number: 3001
    - host: contracts.api.koiner.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: koiner-contracts-graphql
                port:
                  number: 3002
    - host: network.api.koiner.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: koiner-network-graphql
                port:
                  number: 3003
    - host: tokenize.api.koiner.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: koiner-tokenize-graphql
                port:
                  number: 3004
